Application now opens in a window Basic layout of application and grid for nodes is done Commented out a few things here and there which will probably not used in next versions